--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="rockpaperscissors.css">
     <link href='https://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -33,16 +34,26 @@
               <li class="character"></li><li class="wins">0</li>
             </ul>
           </div>
-
           <div id="computer">
             <ul>
               <li class="wins">0</li><li class="character"></li>
             </ul>
           </div>
         </header>
+
         <section id="hands">
-          <div id="player-hand" class="hand rock"></div><div id="computer-hand" class="hand rock"></div>
+          <div class="hand-container">
+            <!-- to use img tag with background image - having src removes border -->
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA" id="player-hand" class="hand rock"></img>
+          </div><div class="hand-container">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA" id="computer-hand" class="hand rock"></img>
+          </div>
         </section>
+
+        <ul id="controls">
+          <li id="rock" class="rock"></li><li id="paper" class="paper">
+          </li><li id="scissors" class="scissors"></li>
+        </ul>
       </main>
 
       <footer>Made with <a href="https://github.com/twitter/twemoji">Twemoji</a></footer>
