--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="rockpaperscissors.css">
+    <link href="rockpaperscissors.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <title>Rock, Paper, Scissors!</title>
   </head>
   <body>
-    <div class="container">
-      <section id="alert-box">
+    <div class="full-page-container">
+      <section id="alert-box" class="alert-box">
         Choose your character!
       </section>
-      <ul id="character-choices">
+      <ul id="character-choices" class="character-choices">
         <li id="dog" class="character-choice dog"></li>
         <li id="tiger" class="character-choice tiger"></li>
         <li id="chick" class="character-choice chick"></li>
@@ -41,16 +41,15 @@
           </div>
         </header>
 
-        <section id="hands">
+        <section id="hands" class="hands">
           <div class="hand-container">
-            <!-- to use img tag with background image - having src removes border -->
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA" id="player-hand" class="hand rock"></img>
+            <div id="player-hand" class="hand rock"></div>
           </div><div class="hand-container">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA" id="computer-hand" class="hand rock"></img>
+            <div id="computer-hand" class="hand rock"></div>
           </div>
         </section>
 
-        <ul id="controls">
+        <ul class="controls">
           <li id="rock" class="rock"></li><li id="paper" class="paper">
           </li><li id="scissors" class="scissors"></li>
         </ul>
